# x86-control-unit

./: .gitignore  CMakeLists.txt  Data.hpp  Decoder.cpp  Decoder.hpp  Instruction.hpp  Instruction2.hpp  Label.hpp  Memory.hpp  README.md  Registers.cpp  Registers.hpp  Word.hpp  main.cpp
.github/workflows/: cmake.yml  lint.yml
include/: Data.hpp  Decoder.hpp  Instruction.hpp  Label.hpp  Memory.hpp  Registers.hpp  Word.hpp
samples/: a.out  array_loops.c  array_loops.s  bubblesort.c  bubblesort.s  factorial.c  factorial.s  fibonacci.c  fibonacci.s  funcao_pilha.c  funcao_pilha.s  soma_subtracao.c  soma_subtracao.s
src/: Data.cpp  Decoder.cpp  Instruction.cpp  Instruction2.cpp  Label.cpp  Memory.cpp  Registers.cpp  Word.cpp
